SSB-478: Fixed alignment issue for warning label

--- a/app/design/frontend/Alfakher/globalhookah/Magento_Theme/web/css/source/_extend.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_Theme/web/css/source/_extend.less
@@ -106,12 +106,12 @@
                         justify-content: center;
                         align-items: center;
 
-                        h3 {
-                            text-transform: uppercase;
+                        h3, p {
                             font-size: 1.4rem;
                             font-weight: 600;
                             font-family: @font-family-name__base;
                             margin-left: 0.6rem;
+                            margin-bottom: 0;
                         }
 
                         &::before {
@@ -1150,7 +1150,7 @@
         .warning-section-wrapper {
             .warning-section {  
                 .heading-section {
-                    h3 {
+                    h3, p {
                         font-size: 1rem;
                         margin-left: 0.6rem !important;
                     }
@@ -2166,24 +2166,7 @@
                 padding: 0.4rem 1rem !important;
 
                 .heading-section {
-                    h3 {
-                        margin-left: 0.6rem !important;
-                        width: fit-content;
-                    }
-                }
-            }
-        }
-    }
-
-    body .page-wrapper .page-header {
-        .warning-section-wrapper {
-            .warning-section {
-                max-width: 1280px;
-                margin: 0 auto;
-                padding: 0.4rem 1rem !important;
-    
-                .heading-section {
-                    h3 {
+                    h3, p {
                         margin-left: 0.6rem !important;
                         width: fit-content;
                     }
